api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/tp-kubernetes-postgres: "true"
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: DB_DATABASE
              valueFrom:
                configMapKeyRef:
                  name: api
                  key: db_database
            - name: DB_HOST
              valueFrom:
                configMapKeyRef:
                  name: api
                  key: db_host
            - name: DB_PASSWORD
              valueFrom:
                configMapKeyRef:
                  name: api
                  key: db_password
            - name: DB_USERNAME
              valueFrom:
                configMapKeyRef:
                  name: api
                  key: db_username
            - name: DB_PORT
              value: "5432"
            - name: ACCESS_TOKEN_SECRET
              valueFrom:
                secretKeyRef:
                  name: api
                  key: access_token_secret
            - name: REFRESH_TOKEN_SECRET
              valueFrom:
                secretKeyRef:
                  name: api
                  key: refresh_token_secret
            - name: ACCESS_TOKEN_EXPIRY
              value: "15m"
            - name: REFRESH_TOKEN_EXPIRY
              value: "7d"
            - name: REFRESH_TOKEN_COOKIE_NAME
              value: "jid"
          image: beadi19/kub-api:1.1
          name: api-container
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
      restartPolicy: Always
status: {}
