api/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
spec:
  ingressClassName: nginx
  rules:
    - host: api.localdev.me
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
               name: api
               port: 
                number: 3000
            path: /
